Version 1.10.0+svn:
 * Add-ons server:
   * Reject add-ons with names or titles that begin with a WML text format
     markup character (any of *, `, ~, {, ^, }, |, @, #, <, &)
 * Campaigns:
   * Son of the Black Eye:
     * Removed Al'Brock and Flar'Tar death as defeat condition in objectives in
       Civil War
   * Tutorial:
     * Fixed bug #19316: Narrator messages are now translated.
   * Under the Burning Suns:
     * Made it so that Kaleh gets the default AMLA after he's been fully
       upgraded
 * Language and i18n:
   * Updated translations: French, Indonesian, Italian, Latin, Norwegian,
     Spanish
 * Multiplayer:
   * Fix an accidental terrain type change in Isar's Cross
   * Fix attacker side being human in 6p_Team_Survival (bug #19400)
 * Whiteboard
   * Fixed bug #19369 : Using planning mode can cause losing ability to move my units
   * Fixed bug #19408 : Crash shortly after executing invalid multi-turn move
 * Miscellaneous and bug fixes:
   * Fix wrong preferences path suffix (1.1 instead of 1.10) on Linux and other
     platforms using XDG layout (no compiled-in preferences path override,
     bug #19318)
   * Fixed unit sound animation timings wherever the {SOUND:SLOW} and
     {SOUND:POISON} macros, and several macros from animation-utils2.cfg are used
     (see bug #19274)
   * Restart is no longer required to toggle desktop notifications
   * Show base terrain description if none for overlay (bug #19411)

Version 1.10.0:
 * Campaigns:
   * Legend of Wesmere:
     * Scenario 03: Fixed bug #19067: Control over Galtrid's side stays with the
       player after the arrival of Kalenz
     * Scenario 22: Fixed bug #19236: Cleodil was missing and no recall list
   * An Orcish Incursion:
     * Scenario 3: select a new unit with the Adviser (sic) role for dialogs if
       the original unit selected at the start of the scenario died
   * Under the Burning Suns:
     * Scenario 5: Fixed bug #19303: one of the dwarves was spawning in a wall.