@@ -1137,7 +1137,7 @@ To move your troops onto that island without wading slowly through the water, yo
                     {PRINT (_"Advance other units and capture villages, then <b>End Turn</b>")}
                 [/then]
                 [else]
-                    {STUDENT (_"No other units can reach that orc. I hope my $unit.type survives its counter-attack! I’d better grab more villages and move everyone closer for next turn.")}
+                    {STUDENT (_"No other units can reach that orc. I hope my $unit.language_name survives its counter-attack! I’d better grab more villages and move everyone closer for next turn.")}
                     {TEACHER (_"Yes. If your Shaman stands just behind that unit on the bridge, she will heal it at the beginning of the next turn.")}
                     {PRINT (_"Move your Shaman onto the bridge to stand behind your other unit")}
                     [event]
