@@ -59,11 +59,11 @@
     #! {ON_SIGHTING () 1 side=2,3 (
     #!     [message]
     #!         speaker=unit
-    #!         message= _ "I can see a side $second_unit.side $second_unit.type|!"
+    #!         message= _ "I can see a side $second_unit.side $second_unit.language_name|!"
     #!     [/message]
     #!     [message]
     #!         speaker=second_unit
-    #!         message= _ "Oh my! I was seen by a side $unit.side $unit.type|!"
+    #!         message= _ "Oh my! I was seen by a side $unit.side $unit.language_name|!"
     #!     [/message]
     #! )}
     #!
