@@ -4,6 +4,13 @@ changelog: http://svn.gna.org/viewcvs/*checkout*/wesnoth/branches/1.10/changelog
 
 Version 1.10.0+svn:
  * Campaigns:
+   * Son of the Black Eye:
+     * Removed Al'Brock and Flar'Tar death as defeat condition in objectives in
+       Civil War.
+   * Tutorial:
+     * Fixed bug #19316: Narrator messages are now translated.
+     * Replacd $unit.type by $unit.language_name to make a string completely
+       translateable.
    * Under the Burning Suns:
      * Made it so that Kaleh gets the default AMLA after he's been fully
        upgraded.
