@@ -8,6 +8,8 @@ Version 1.10.0+svn:
        Civil War
    * Tutorial:
      * Fixed bug #19316: Narrator messages are now translated.
+     * Replacd $unit.type by $unit.language_name to make a string completely
+       translateable.
    * Under the Burning Suns:
      * Made it so that Kaleh gets the default AMLA after he's been fully
        upgraded
